include/oox/ole/vbaproject.hxx
@@ -133,6 +133,9 @@ public:
         VbaMacroAttacherBase class. */
     void                registerMacroAttacher( const VbaMacroAttacherRef& rxAttacher );
 
+    /** Attaches VBA macros to objects registered via registerMacroAttacher(). */
+    void                attachMacros();
+
     /** Returns true, if the document contains at least one code module. */
     bool                hasModules() const;
 
@@ -171,9 +174,6 @@ private:
                             StorageBase& rVbaPrjStrg,
                             const GraphicHelper& rGraphicHelper,
                             bool bDefaultColorBgr );
-
-    /** Attaches VBA macros to objects registered via registerMacroAttacher(). */
-    void                attachMacros();
 
     /** Copies the entire VBA project storage to the passed document model. */
     void                copyStorage( StorageBase& rVbaPrjStrg );
